--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,3 +1,84 @@
+#root {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 100vh;
+    background-color: white;
+}
+
+
+/* - - - - - - App.tsx - - - - - - */
 header {
-    
+    z-index: 1;
+    flex: 15%;
+    background: white;
+    padding: 30px 15px;
+    border-right: 1px solid #e3e3e3;
+}
+
+header ul li:nth-child(1) {
+    margin-bottom: 50px;
+}
+
+header ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    list-style-type: none;
+}
+
+header ul a {
+    font-size: 1.5em;
+    color: inherit;
+    text-decoration: none;
+}
+
+header ul a:visited {
+    color: inherit;
+}
+
+
+main {
+    flex: 85%;
+    background: #fff5e1;
+}
+
+
+footer {
+    display: none;
+    flex: content;
+    text-align: center;
+    background: #fff5e1;
+    padding: 15px;
+}
+
+
+/* - - - - - - home-navbar.tsx - - - - - - */
+nav {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.2em;
+    background: white;
+    max-width: 85vw;
+    padding: 0 50px;
+    box-shadow: 0px 2px 8px #8d8d8d27;
+}
+nav section {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 0;
+}
+.pfp {
+    display: flex;
+    gap: 10px;
+}
+nav ul {
+    display: flex;
+    gap: 80px;
+    margin-bottom: 10px;
+    white-space: nowrap;
+    list-style-type: none;
+    overflow-x: auto;
+    scrollbar-width: thin;
 }
