--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -24,14 +24,19 @@ header ul {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center;
     list-style-type: none;
 }
 
 header ul a {
+    display: flex;
+    gap: 20px;
     font-size: 1.5em;
     color: inherit;
     text-decoration: none;
+}
+header ul a img {
+    width: 40px;
+    height: 40px;
 }
 
 header ul a:visited {
@@ -67,11 +72,43 @@ nav {
 nav section {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 30px 0;
+}
+nav form {
+    display: flex;
+    flex-direction: row;
+    border: solid 1px black;
+    border-radius: 5px;
+}
+nav form input {
+    font-size: 1.05rem;
+    width: 250px;
+    padding: 0 15px;
+    border: none;
+}
+nav form button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #D99873;
+    padding: 8px 15px;
+    border: none;
+    cursor: pointer;
+}
+nav form img {
+    width: 20px;
+    height: 20px;
 }
 .pfp {
     display: flex;
+    align-items: center;
     gap: 10px;
+    cursor: pointer;
+}
+.pfp img {
+    width: 40px;
+    height: 40px;
 }
 nav ul {
     display: flex;
@@ -81,4 +118,10 @@ nav ul {
     list-style-type: none;
     overflow-x: auto;
     scrollbar-width: thin;
+}
+nav ul li:hover {
+    cursor: pointer;
+}
+nav ul li:hover {
+    color: #D99873;
 }
