--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -10,12 +10,11 @@
 /* - - - - - - App.tsx - - - - - - */
 header {
     z-index: 1;
-    flex: 15%;
     background: white;
+    width: 150px;
     padding: 30px 15px;
     border-right: 1px solid #e3e3e3;
 }
-
 header ul li:nth-child(1) {
     margin-bottom: 50px;
 }
@@ -23,20 +22,24 @@ header ul li:nth-child(1) {
 header ul {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    align-items: center;
+    gap: 20px;
     list-style-type: none;
 }
-
 header ul a {
     display: flex;
-    gap: 20px;
-    font-size: 1.5em;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.3em;
     color: inherit;
     text-decoration: none;
 }
 header ul a img {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
+}
+header ul a span {
+    color: #3c4043;
 }
 
 header ul a:visited {
@@ -45,14 +48,14 @@ header ul a:visited {
 
 
 main {
-    flex: 85%;
+    flex: auto;
     background: #fff5e1;
 }
 
 
 footer {
+    flex: none;
     display: none;
-    flex: content;
     text-align: center;
     background: #fff5e1;
     padding: 15px;
@@ -65,9 +68,10 @@ nav {
     flex-direction: column;
     font-size: 1.2em;
     background: white;
-    max-width: 85vw;
+    /* max-width: 100%; */
     padding: 0 50px;
     box-shadow: 0px 2px 8px #8d8d8d27;
+    box-sizing: border-box;
 }
 nav section {
     display: flex;
@@ -83,7 +87,7 @@ nav form {
 }
 nav form input {
     font-size: 1.05rem;
-    width: 250px;
+    width: 350px;
     padding: 0 15px;
     border: none;
 }
@@ -112,12 +116,16 @@ nav form img {
 }
 nav ul {
     display: flex;
-    gap: 80px;
+    justify-content: space-between;
+    /* gap: 80px; */
     margin-bottom: 10px;
     white-space: nowrap;
     list-style-type: none;
     overflow-x: auto;
     scrollbar-width: thin;
+}
+nav ul li {
+    transition: 0.1s;
 }
 nav ul li:hover {
     cursor: pointer;
