--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -10,21 +10,24 @@
 /* - - - - - - App.tsx - - - - - - */
 header {
     z-index: 1;
-    background: white;
-    width: 150px;
+    background: #fff5e1;
+    width: 120px;
     padding: 30px 15px;
-    border-right: 1px solid #e3e3e3;
+    /* border-right: 1px solid #e3e3e3; */
 }
-header ul li:nth-child(1) {
-    margin-bottom: 50px;
-}
-
 header ul {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     gap: 20px;
+    height: 100%;
     list-style-type: none;
+    position: relative;
+}
+header ul li:nth-child(1) {
+    position: absolute;
+    top: 0;
 }
 header ul a {
     display: flex;
@@ -40,6 +43,11 @@ header ul a img {
 }
 header ul a span {
     color: #3c4043;
+    transition: 0.1s;
+}
+header ul a:hover span {
+    font-weight: 500;
+    color: #272727;
 }
 
 header ul a:visited {
@@ -49,7 +57,7 @@ header ul a:visited {
 
 main {
     flex: auto;
-    background: #fff5e1;
+    background: white;
 }
 
 
@@ -69,6 +77,7 @@ nav {
     font-size: 1.2em;
     background: white;
     /* max-width: 100%; */
+    margin-bottom: 50px;
     padding: 0 50px;
     box-shadow: 0px 2px 8px #8d8d8d27;
     box-sizing: border-box;
@@ -79,17 +88,23 @@ nav section {
     align-items: center;
     padding: 30px 0;
 }
+nav section > img {
+    display: none;
+}
 nav form {
     display: flex;
     flex-direction: row;
     border: solid 1px black;
-    border-radius: 5px;
+    border-radius: 8px;
 }
 nav form input {
     font-size: 1.05rem;
-    width: 350px;
-    padding: 0 15px;
+    width: 500px;
+    padding: 8px 15px;
     border: none;
+}
+nav form input:focus-visible {
+    outline: none;
 }
 nav form button {
     display: flex;
@@ -110,7 +125,7 @@ nav form img {
     gap: 10px;
     cursor: pointer;
 }
-.pfp img {
+nav section > img, .pfp img {
     width: 40px;
     height: 40px;
 }
@@ -132,4 +147,9 @@ nav ul li:hover {
 }
 nav ul li:hover {
     color: #D99873;
+}
+
+#home-news {
+    display: flex;
+    justify-content: space-around;
 }
