--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -10,20 +10,21 @@
 /* - - - - - - App.tsx - - - - - - */
 header {
     z-index: 1;
-    background: #fff5e1;
-    width: 120px;
-    padding: 30px 15px;
+    background: #fffbf1;
+    width: 70px;
+    padding: 20px 5px;
     /* border-right: 1px solid #e3e3e3; */
+    box-sizing: content-box;
 }
 header ul {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
     height: 100%;
     list-style-type: none;
-    position: relative;
 }
 header ul li:nth-child(1) {
     position: absolute;
@@ -33,17 +34,16 @@ header ul a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 1.3em;
     color: inherit;
     text-decoration: none;
 }
 header ul a img {
-    width: 35px;
-    height: 35px;
+    width: 25px;
+    height: 25px;
 }
 header ul a span {
     color: #3c4043;
-    transition: 0.1s;
+    transition: 0.1s ease;
 }
 header ul a:hover span {
     font-weight: 500;
@@ -58,6 +58,7 @@ header ul a:visited {
 main {
     flex: auto;
     background: white;
+    overflow: auto;
 }
 
 
@@ -65,7 +66,7 @@ footer {
     flex: none;
     display: none;
     text-align: center;
-    background: #fff5e1;
+    background: #fff6e4;
     padding: 15px;
 }
 
@@ -74,19 +75,17 @@ footer {
 nav {
     display: flex;
     flex-direction: column;
-    font-size: 1.2em;
     background: white;
     /* max-width: 100%; */
-    margin-bottom: 50px;
     padding: 0 50px;
-    box-shadow: 0px 2px 8px #8d8d8d27;
+    box-shadow: 0px 1px 10px #8d8d8d27;
     box-sizing: border-box;
 }
 nav section {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 0;
+    padding: 20px 0;
 }
 nav section > img {
     display: none;
@@ -96,11 +95,12 @@ nav form {
     flex-direction: row;
     border: solid 1px black;
     border-radius: 8px;
+    overflow: hidden;
 }
 nav form input {
     font-size: 1.05rem;
-    width: 500px;
-    padding: 8px 15px;
+    width: 400px;
+    padding: 5px 15px;
     border: none;
 }
 nav form input:focus-visible {
@@ -111,7 +111,7 @@ nav form button {
     justify-content: center;
     align-items: center;
     background: #D99873;
-    padding: 8px 15px;
+    padding: 5px 15px;
     border: none;
     cursor: pointer;
 }
@@ -126,8 +126,8 @@ nav form img {
     cursor: pointer;
 }
 nav section > img, .pfp img {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
 }
 nav ul {
     display: flex;
@@ -152,4 +152,26 @@ nav ul li:hover {
 #home-news {
     display: flex;
     justify-content: space-around;
+    gap: 20px;
+    padding: 30px;
+}
+.main-news {
+    flex: 70%;
+}
+.main-news a {
+    color: inherit;
+    text-decoration: none;
+}
+.main-news a:hover h2 {
+    text-decoration: underline 2px #D99873;
+}
+.main-news img {
+    width: 100%;
+    height: auto;
+}
+.other-news {
+    flex: 30%;
+}
+.other-news ul {
+    list-style-type: none;
 }
