--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -11,7 +11,6 @@
 header {
     z-index: 2;
     background: #fff5dd;
-    width: 70px;
     padding: 20px 10px;
     /* border-right: 1px solid #e3e3e3; */
     box-sizing: content-box;
@@ -23,6 +22,7 @@ header ul {
     justify-content: center;
     align-items: center;
     gap: 10px;
+    width: 50px;
     height: 100%;
     list-style-type: none;
 }
@@ -49,7 +49,6 @@ header ul a:hover span {
     font-weight: 500;
     color: #272727;
 }
-
 header ul a:visited {
     color: inherit;
 }
@@ -186,6 +185,8 @@ nav ul li:hover {
 .main-news h2 {
     margin: 10px 0;
 }
+
+
 .other-news {
     flex: 45%;
 }
@@ -253,16 +254,87 @@ nav ul li:hover {
     flex-wrap: wrap;
 }
 
+
 .recipe-box {
     position: relative;
     flex: 30%;
     text-align: left;
+    border-radius: 5px;
+    overflow: hidden;
+    transition: 0.2s ease;
+}
+.recipe-box:hover {
+    background: #f1f1f1;
+}
+.recipe-box-info:hover ~ img {
+    transform: scale(1.1);
 }
 .recipe-box > img {
     width: 100%;
     height: auto;
 }
+.recipe-box-info {
+    padding: 10px;
+}
 .recipe-box-info h3 {
     color: #e88e59;
+    margin-bottom: 5px;
 }
+
+
+.img-background {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-image: url("https://placehold.co/600x400");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+    width: 100%;
+    height: 80vh;
+    margin: 50px 0;
+}
+.img-background h2 {
+    padding: 50px 100px;
+}
+
+
 /* - - - - - - search-bar.tsx - - - - - - */
+
+
+/* - - - - - - footer-page.tsx - - - - - - */
+.footer {
+    display: flex;
+    justify-content: flex-start;
+    gap: 100px;
+    background: #ebffe6;
+    width: 100%;
+    margin-top: 100px;
+    padding: 40px 80px;
+}
+.footer h3 {
+    color: #213e17;
+}
+.footer p {
+    color: #051200;
+}
+
+
+/* - - - - - - - news-main.tsx - - - - - - */
+.news-main {
+    text-align: center;
+    padding: 50px 100px;
+}
+.news-main p {
+    margin: 20px 0;
+}
+.news-main ul {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    list-style-type: none;
+}
+
+
+/* - - - - - - news-box.tsx - - - - - - */
