--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -82,7 +82,7 @@ nav {
     background: white;
     width: 100%;
     padding: 0 50px;
-    box-shadow: 0px 1px 10px #8d8d8d27;
+    box-shadow: 0px 1px 8px #56565641;
     box-sizing: border-box;
     transition: all 0.2s ease;
 }
@@ -118,10 +118,14 @@ nav form button {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #e88e59;
+    background: #ef7e3d;
     padding: 5px 10px;
     border: none;
     cursor: pointer;
+    transition: 0.2s ease;
+}
+nav form button:hover {
+    background: #c65f23;
 }
 nav form img {
     width: 20px;
@@ -171,11 +175,11 @@ nav ul li:hover {
 .main-news {
     flex: 55%;
 }
-.main-news a, .other-news a, .recipe-box {
+.main-news a, .other-news a, .recipe-box, .news-box {
     color: inherit;
     text-decoration: none;
 }
-.main-news a:hover h2, .other-news a:hover h4 {
+.main-news a:hover h2, .other-news a:hover h4, .news-box:hover h4 {
     text-decoration: underline 2px #e88e59;
 }
 .main-news img {
@@ -208,18 +212,19 @@ nav ul li:hover {
     flex: 30%;
     width: 30%;
 }
-.other-news a .news-box-info {
+.other-news a .home-news-box-info {
     flex: 70%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: auto;
+    padding: 10px 0;
 }
-.news-box-info aside {
+.home-news-box-info aside, .news-box-info aside {
     display: flex;
     justify-content: space-between;
     font-size: 0.8em;
-    color: #728c69;
+    color: #569940;
 }
 .other-news button {
     display: block;
@@ -266,15 +271,16 @@ nav ul li:hover {
 .recipe-box:hover {
     background: #f1f1f1;
 }
-.recipe-box-info:hover ~ img {
+.recipe-box:hover img {
     transform: scale(1.1);
 }
 .recipe-box > img {
     width: 100%;
     height: auto;
+    transition: 0.2s ease-in-out;
 }
 .recipe-box-info {
-    padding: 10px;
+    padding: 15px;
 }
 .recipe-box-info h3 {
     color: #e88e59;
@@ -283,22 +289,31 @@ nav ul li:hover {
 
 
 .img-background {
+    position: relative;
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    flex-direction: column;
+    margin: 50px 0;
+}
+.img-background section {
     background-image: url("https://placehold.co/600x400");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    text-align: center;
     width: 100%;
-    height: 80vh;
-    margin: 50px 0;
+    height: 75vh;
+}
+.img-background article {
+    top: 50%;
+    transform: translateY(-50%);
+    left: 80px;
+    background: white;
+    position: absolute;
+    width: 400px;
+    padding: 20px 30px;
 }
 .img-background h2 {
-    padding: 50px 100px;
+    font-size: 2.3em;
 }
-
 
 /* - - - - - - search-bar.tsx - - - - - - */
 
@@ -310,6 +325,7 @@ nav ul li:hover {
     gap: 100px;
     background: #ebffe6;
     width: 100%;
+    height: 70vh;
     margin-top: 100px;
     padding: 40px 80px;
 }
@@ -324,7 +340,10 @@ nav ul li:hover {
 /* - - - - - - - news-main.tsx - - - - - - */
 .news-main {
     text-align: center;
-    padding: 50px 100px;
+    margin: 100px;
+}
+.news-main h1 {
+    font-size: 2.5em;
 }
 .news-main p {
     margin: 20px 0;
@@ -335,6 +354,36 @@ nav ul li:hover {
     flex-wrap: wrap;
     list-style-type: none;
 }
+.news-main ul li {
+    font-weight: 600;
+    cursor: pointer;
+}
+.news-main ul li:hover {
+    text-decoration: underline 2px #ef7e3d;
+}
 
+/* - - - - - - news-container.tsx, news-box.tsx - - - - - - */
+.news-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 30px;
+}
+.news-box {
+    flex: 20%;
+    display: flex;
+    flex-direction: column;
 
-/* - - - - - - news-box.tsx - - - - - - */
+    box-shadow: 0px 0px 2px #00000055;
+}
+.news-box img {
+    flex: 50%;
+    width: 100%;
+}
+.news-box-info {
+    flex: 50%;
+    padding: 20px 15px;
+}
+.news-box-info aside {
+    margin-bottom: 10px;
+}
