--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -11,7 +11,7 @@
 header {
     z-index: 2;
     background: #fff5dd;
-    padding: 20px 10px;
+    padding: 15px 10px;
     /* border-right: 1px solid #e3e3e3; */
     box-sizing: content-box;
 }
@@ -29,6 +29,10 @@ header ul {
 header ul li:nth-child(1) {
     position: absolute;
     top: 0;
+}
+header ul li:nth-child(1) a img {
+    width: 50px;
+    height: auto;
 }
 header ul a {
     display: flex;
@@ -179,7 +183,7 @@ nav ul li:hover {
     color: inherit;
     text-decoration: none;
 }
-.main-news a:hover h2, .other-news a:hover h4, .news-box:hover h4 {
+.main-news a:hover h2, .other-news a:hover h4, .news-box:hover h4, .footer-content ul li:hover {
     text-decoration: underline 2px #e88e59;
 }
 .main-news img {
@@ -231,12 +235,12 @@ nav ul li:hover {
     background: transparent;
     margin: 10px auto;
     padding: 7px 18px;
-    border: solid 1px #ec9e70;
+    border: solid 1px #e88e59;
     border-radius: 3px;
     transition: 0.2s ease;
 }
 .other-news button:hover {
-    background: #ec9e70;
+    background: #e88e59;
     color: white;
     border: solid 1px transparent;
     cursor: pointer;
@@ -366,20 +370,32 @@ nav ul li:hover {
 }
 /* - - - - - - footer-page.tsx - - - - - - */
 .footer {
-    display: flex;
-    justify-content: flex-start;
-    gap: 100px;
-    background: #ebffe6;
-    width: 100%;
+    position: relative;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background: #e1f5da;
     height: 70vh;
     margin-top: 100px;
-    padding: 40px 80px;
+    border-top: solid 1px #8bbd8b;
 }
-.footer h3 {
-    color: #213e17;
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 100px;
+    padding-top: 30px;
 }
-.footer p {
-    color: #051200;
+.footer-content ul {
+    list-style-type: none;
+}
+.footer img {
+    width: 200px;
+    height: auto;
+}
+.footer > p {
+    text-align: center;
+    padding: 10px;
 }
 
 
