--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -46,7 +46,7 @@ header ul a:visited {
 }
 header ul a img {
     width: 25px;
-    height: 25px;
+    height: auto;
 }
 header ul a span {
     color: #3c4043;
@@ -70,10 +70,10 @@ footer {
     display: none;
     text-align: center;
     background: #fff5dd;
-    padding: 15px;
+    padding: 8px;
 }
 footer img {
-    width: 100px;
+    width: 30px;
     height: auto;
 }
 
@@ -101,9 +101,6 @@ nav section {
     justify-content: space-between;
     align-items: center;
     padding: 20px 0;
-}
-nav section > img {
-    display: none;
 }
 .search-bar, .search-bar-container-search {
     display: flex;
@@ -158,7 +155,7 @@ nav ul {
     overflow-x: auto;
     scrollbar-width: thin;
 }
-.hide-nav-ul {
+.hide {
     display: none;
 }
 nav ul li {
@@ -270,6 +267,7 @@ nav ul li:hover {
     position: relative;
     flex: 30%;
     text-align: left;
+    min-width: 200px;
     border-radius: 5px;
     overflow: hidden;
     transition: 0.2s ease;
@@ -402,27 +400,28 @@ nav ul li:hover {
 
 
 /* - - - - - - - news-main.tsx - - - - - - */
-.news-main {
+#news-main {
     text-align: center;
     margin: 100px;
 }
-.news-main h1 {
+#news-main h1 {
     font-size: 2.5em;
 }
-.news-main p {
+#news-main p {
     margin: 20px 0;
 }
-.news-main ul {
+#news-main ul {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
+    gap: 20px;
     list-style-type: none;
 }
-.news-main ul li {
+#news-main ul li {
     font-weight: 600;
     cursor: pointer;
 }
-.news-main ul li:hover {
+#news-main ul li:hover {
     text-decoration: underline 2px #ef7e3d;
 }
 
@@ -437,15 +436,13 @@ nav ul li:hover {
     flex: 20%;
     display: flex;
     flex-direction: column;
-
+    min-width: 200px;
     box-shadow: 0px 0px 2px #00000055;
 }
 .news-box img {
-    flex: 50%;
     width: 100%;
 }
 .news-box-info {
-    flex: 50%;
     padding: 20px 15px;
 }
 .news-box-info aside {
@@ -528,8 +525,6 @@ nav ul li:hover {
 /* - - - - - - profile-subpage.tsx - - - - - - */
 #profile {
     margin: 10px 30px;
-}
-#profile-user {
     display: flex;
     justify-content: space-between;
     gap: 30px;
@@ -558,7 +553,7 @@ nav ul li:hover {
     background: #a9cea9;
     color: white;
     padding: 2px 4px;
-    border:solid 1px #569940;
+    border: solid 1px #569940;
     border-radius: 4px;
     cursor: pointer;
 }
@@ -571,6 +566,25 @@ nav ul li:hover {
 }
 .profile-count p {
     font-size: 0.8em;
+}
+#profile-sys {
+    margin: 10px 0;
+    padding: 10px 50px 0 0;
+    border-top: solid 1px grey;
+}
+#profile-sys button {
+    background: #c24e4e;
+    color: white;
+    text-align: center;
+    width: 100%;
+    margin: 3px;
+    padding: 2px 4px;
+    border: solid 1px #ad3333;
+    border-radius: 4px;
+    cursor: pointer;
+}
+#profile-sys button:hover {
+    background: #8d3131;
 }
 
 #profile-recipes-container {
@@ -590,9 +604,6 @@ nav ul li:hover {
     border-top: solid 1px #8bbd8b;
     border-radius: 0;
 }
-#profile-recipes-container .recipe-box:hover {
-    background: inherit;
-}
 #profile-recipes-container .recipe-box img {
     display: none;
 }
@@ -600,6 +611,110 @@ nav ul li:hover {
     padding: 15px 0;
 }
 
-#profile-sys {
-    text-align: center;
+
+/* - - - - - - responsive layout - - - - - - */
+@media screen and (max-width: 800px) {
+    .search-bar {
+        width: 60%;
+        min-width: 200px;
+    }
+
+    #home-news {
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    .search-bar-container {
+        flex-direction: column;
+    }
+    .search-bar-section form {
+        width: 100%;
+    }
+
+    .img-background section {
+        height: 50vh;
+    }
+    .img-background article {
+        position: relative;
+        top: 0;
+        left: 0;
+        transform: translateY(0);
+        width: inherit;
+        border-top: solid 1px black;
+        border-bottom: solid 1px black;
+    }
+
+    #news-main {
+        margin: 100px 50px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    #root {
+        flex-direction: column-reverse;
+    }
+
+    header {
+        padding: 8px;
+    }
+    header ul {
+        flex-direction: row;
+        justify-content: space-evenly;
+        width: inherit
+    }
+    header ul li:first-child {
+        display: none;
+    }
+    header ul li span {
+        font-size: 0.8em;
+    }
+
+    footer {
+        display: inline;
+    }
+
+    nav {
+        background: #fff5dd;
+    }
+    nav section {
+        padding-top: 0;
+    }
+
+    .search-bar button {
+        display: none;
+    }
+
+    #news-main ul li, .footer-content ul li {
+        text-decoration: underline 2px #ef7e3d;
+    }
+
+    .footer {
+        justify-content: space-around;
+    }
+    .footer-content {
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    #profile {
+         flex-direction: column;
+         gap: 50px;
+         margin: 20px 50px;
+    }
+    #profile-recipes-container input {
+        width: 100%;
+    }
+
+    #login-page, #signin-page {
+        flex-direction: column;
+    }
+    #login-page .login-background, #signin-page .signin-background {
+        flex: 40%;
+    }
+    #login-page > div, #signin-page > div {
+        flex: 60%;
+    }
+    #login-form, #signin-form {
+        gap: 30px;
+    }
 }
