--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -179,11 +179,11 @@ nav ul li:hover {
 .main-news {
     flex: 55%;
 }
-.main-news a, .other-news a, .recipe-box, .news-box, .search-bar-options div a, #account-nav a, .pfp {
+.main-news a, .other-news a, .recipe-box, .news-box, .search-bar-options div a, #account-nav a, .pfp, .footer a {
     color: inherit;
     text-decoration: none;
 }
-.main-news a:hover h2, .other-news a:hover h4, .news-box:hover h4, .footer-content ul li:hover {
+.main-news a:hover h2, .other-news a:hover h4, .news-box:hover h4, .footer-content ul li:hover, .footer a {
     text-decoration: underline 2px #e88e59;
 }
 .main-news img {
