--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -100,7 +100,7 @@ nav section {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+    padding: 25px 0;
 }
 .search-bar, .search-bar-container-search {
     display: flex;
@@ -653,6 +653,27 @@ nav ul li:hover {
     padding: 15px 0;
 }
 
+
+/* - - - - - - profile-subpage.tsx - - - - - - */
+.search-result {
+    padding: 50px;
+}
+.search-result .search-bar-container-search {
+    margin-top: 5px;
+}
+.search-result h2 {
+    font-size: 1.2rem;
+}
+.search-result input {
+    width: 300px;
+    padding: 2px 4px;
+}
+.search-result input:focus ~ button {
+    display: flex;
+}
+.search-result button {
+    display: none;
+}
 
 
 /* - - - - - - responsive layout - - - - - - */
